# wxcli

./: NOTICE  README.md  pyproject.toml
.github/: workflows
.github/workflows/: ci.yml
tests/: test_wxtcli.py
wxcli/: api.py  calling.py  console.py  main.py  people.py  rooms.py  teams.py  voicemail.py  workspace.py  workspacetest.csv
wxcli/helpers/: formatting.py
wxtcli/: api.py  calling.py  main.py  people.py  rooms.py  teams.py  voicemail.py  workspace.py
wxtcli/helpers/: formatting.py
