[tool.poetry]
name = "wxtcli"
version = "0.1.0"
description = "A CLI application for interacting with Cisco Webex Teams"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]
readme = "README.md"

[tool.poetry.scripts]
wxtcli = "wxtcli.main:app"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
