[tool.poetry]
name = "wxtcli"
version = "0.1.0"
description = "A CLI application for interacting with Cisco Webex Teams"
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]
readme = "README.md"

[tool.poetry.scripts]
wxtcli = "wxtcli.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}
rich = "^10.12.0"
webexteamssdk = "^1.6"
humanize = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
