[tool.poetry]
name = "wxcli"
version = "0.2.0"
description = "CLI tools for managaing Cisco Webex"
authors = ["Billy Zoellers <billy.zoellers@mac.com>", "David Rice <dwrice0@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
wxcli = "wxcli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
webexteamssdk = "^1.6"
humanize = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
